k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: event-planner-pipeline-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /
              port: 8000

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 8000

            initialDelaySeconds: 10
            periodSeconds: 5

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"
