k8s/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: queue-worker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: queue-worker

  template:
    metadata:
      labels:
        app: queue-worker

    spec:
      containers:
        - name: queue-worker

          image: event-planner-pipeline-backend:latest
          imagePullPolicy: Never

          command:
            - sh
            - -c
            - |
              php artisan optimize:clear &&
              php artisan config:cache &&
              php artisan queue:work --tries=3 --timeout=90
