k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: event-planner-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: 13.63.139.72.nip.io

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8000
